[package]
name = "ocpp-csms-server"
version = "0.2.0"
edition = "2021"
authors = ["Gijs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ocpp = { version = "3.0", features = ["v1_6"] }
axum = { version = "0.6.0-rc.2", features = ["ws", "headers"] }
chrono = "0.4"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
anyhow = "1.0.66"
headers = "0.3"
once_cell = "1"
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum_macros = "0.24.3"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
tower = "0.4.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
mockall = "0.11.3"

[[bin]]
name = "csms"
test = false
bench = false
path = "src/main.rs"

[package.metadata.deb]
name = "ocpp-csms"
depends = "$auto"
priority = "optional"
assets = [
    [
        "target/release/csms",
        "/usr/bin/ocpp-csms",
        "755",
    ],
]
maintainer-scripts = "debian/"

[package.metadata.deb.systemd-units]
enable = true
unit-name = "ocpp-csms"
